# opengl-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dump/: main_dump
editor/: editor.h  newshadermodule.h  showdowexample.h
examples/: basic_texture.h  lit_model.h  new_model_test.h
include/: app.h  clock.h  core.h  debug.h  event.h  imgui_setup.h  window.h
include/examples/: basic_texture.h
include/gfx/: ebo.h  framebuffer.h  mesh.h  model.h  newframebuffer.h  shader.h  shader_storage.h  texture.h  vao.h  vbo.h
include/renderer/: simple_renderer.h
include/utils/: bvh.h  camera.h  components.h  controller.h  ecs.h  shader_loader.h  utils.h
renderer/: basic_renderer.h  lightexample_renderer.h
shaders/comp/: ray_tracer.comp  raytracer_with_bvh.comp  test.comp
shaders/frag/: basic_texture.frag  debugShadowObject.frag  frame_buffer.frag  light.frag  lit_model.frag  lit_model_light.frag  mesh.frag  new_mesh_test.frag  newshader.frag  object.frag  screen_shader.frag  shader.frag  shadowLightShader.frag  shadowObjectShader.frag  simple_light_renderer.frag  simple_renderer.frag  texture_example.frag
shaders/vert/: debugShadowObject.vert  frame_buffer.vert  light.vert  lit_model.vert  lit_model_light.vert  new_mesh_test.vert  newshader.vert  object.vert  screen_shader.vert  shader.vert  shadow.vert  shadowLightShader.vert  shadowObjectShader.vert  simple_light_renderer.vert  simple_renderer.vert  simple_shader.vert  simple_shader_with_camera.vert
src/: app.cpp  debug.cpp  main.cpp
src/gfx/: ebo.cpp  framebuffer.cpp  mesh.cpp  model.cpp  shader.cpp  (+5 more)
(+4 files in other folders)
